                              Apache Tomcat 3.3.2
                              ===================
                                 Release Notes
                                 =============

$Id$


This document describes the changes that have been made since the
release of Tomcat 3.3.1 Final.

=========
Bug Fixes
=========

The release in which the fix appears is indicated in brackets.

Feature Additions:

Bug No.  Description

8099     Preserve the query string when redirecting to the welcome page.


Server:

Bug No.  Description

         Bug fixed in SimpleSessionStore in session attribute reloading during
         context reloads.

8092	 Fixed JSP source exposure proplem.

Jasper:

Bug No.  Description



Configuration:

Bug No.  Description



Connectors:

Bug No.  Description



Documentation:

Bug No.  Description
