@@ -245,10 +245,12 @@
     <fixcrlf srcdir="${tomcat.build}/bin" includes="**/*.sh" eol="lf"/>
     <fixcrlf srcdir="${tomcat.build}/bin" includes="**/*.bat" eol="crlf"/>
 
-    <chmod perm="+x" file="${tomcat.build}/bin/tomcat.sh"/>
-    <chmod perm="+x" file="${tomcat.build}/bin/jspc.sh"/>
-    <chmod perm="+x" file="${tomcat.build}/bin/startup.sh"/>
-    <chmod perm="+x" file="${tomcat.build}/bin/shutdown.sh"/>
+    <chmod perm="+x" file="${tomcat.build}/bin/*.sh"/>
+
+    <move todir="${tomcat.build}/bin">
+      <fileset dir="${tomcat.build}/bin" includes="*.sh"/>
+      <mapper type="glob" from="*.sh" to="*"/>
+    </move>
   </target>
 
   <target name="dep.tomcat-util" unless="tomcat-util.is.uptodate"
@@ -804,10 +806,10 @@
     </copy>
 
     <!-- Change permissions for unix -->
-    <chmod perm="+x" file="${tomcat.dist}/bin/tomcat.sh"/>
-    <chmod perm="+x" file="${tomcat.dist}/bin/jspc.sh"/>
-    <chmod perm="+x" file="${tomcat.dist}/bin/startup.sh"/>
-    <chmod perm="+x" file="${tomcat.dist}/bin/shutdown.sh"/>
+    <chmod perm="+x" file="${tomcat.dist}/bin/tomcat"/>
+    <chmod perm="+x" file="${tomcat.dist}/bin/jspc"/>
+    <chmod perm="+x" file="${tomcat.dist}/bin/startup"/>
+    <chmod perm="+x" file="${tomcat.dist}/bin/shutdown"/>
   </target>
 
   <path id="javadoc.classpath">
