@@ -53,7 +53,7 @@ to true. It should look like:
 You can also do that by running the command:
 <pre>
 Unix:
-$TOMCAT_HOME/bin/tomcat.sh run -enableAdmin
+$TOMCAT_HOME/bin/tomcat run -enableAdmin
 
 DOS:
 %TOMCAT_HOME%\bin\tomcat.bat run -enableAdmin
@@ -74,7 +74,7 @@ TOMCAT_HOME/conf/users/admin-users.xml and change the "password" attribute.
 You can do both by running the command:
 <pre>
 Unix:
-$TOMCAT_HOME/bin/tomcat.sh run -enableAdmin password
+$TOMCAT_HOME/bin/tomcat run -enableAdmin password
 
 DOS:
 %TOMCAT_HOME%\bin\tomcat.bat run -enableAdmin password
