@@ -214,7 +214,7 @@ conditional checking did not catch.
 Assuming you have integrated your application as described earlier, this
 is very simple.  Under Unix, simply execute:
 <pre>
-	$TOMCAT_HOME/bin/startup.sh
+	$TOMCAT_HOME/bin/startup
 </pre>
 
 <p>or, under Windows, execute:
