@@ -78,7 +78,7 @@ ContextManager properties.</p>
     arguments, where <i>name</i> doesn't match any of the arguments supported
     by the <a href="tomcat-ug.html#tomcat_task_args">&quot;start&quot; task</a>.
     For example:<br>
-    <pre>    bin/startup.sh -my.prop myvalue</pre></li>
+    <pre>    bin/startup -my.prop myvalue</pre></li>
 </ol>
 
 <p><b>Note:</b> The property values may themselves use &quot;variable
