@@ -209,7 +209,7 @@ grant codeBase "file:${tomcat.home}/webapps/examples" {
 <a NAME="start"></a>Starting Tomcat with a SecurityManager</h3>
 Once you have configured the tomcat.policy for use
 with a SecurityManager, Tomcat can be started with the SecurityManager
-in place by adding the "-security" option to bin/startup.bat or bin/startup.sh.
+in place by adding the "-security" option to bin/startup.bat or bin/startup.
 <br>&nbsp;
 <h3>
 <a NAME="violation"></a>What happens when the SecurityManager detects a
