@@ -387,7 +387,7 @@ Tomcat (choose one or the other):<br>
 <li>Alternatively, you can make these jars available via the classpath that is
     passed to Tomcat on startup. This will need to be done in the appropriate
     startup script for your environment (
-    <code>$TOMCAT_HOME/bin/tomcat.sh</code> in Unix, or
+    <code>$TOMCAT_HOME/bin/tomcat</code> in Unix, or
     <code>%TOMCAT_HOME%\bin\tomcat.bat</code> in Windows).</li>
 </ul>
 <b>Note:</b> The system classpath is effectively ignored by Tomcat, so
@@ -549,7 +549,7 @@ Tomcat (choose one or the other):<br>
  <li>Alternatively, you can make these jars available via the classpath that is
     passed to Tomcat on startup. This will need to be done in the appropriate
     startup script for your environment (
-    <code>$TOMCAT_HOME/bin/tomcat.sh</code> in Unix, or
+    <code>$TOMCAT_HOME/bin/tomcat</code> in Unix, or
     <code>%TOMCAT_HOME%\bin\tomcat.bat</code> in Windows).</li>
 </ul>
 <b>Note:</b> The system classpath is effectively ignored by Tomcat, so
