@@ -1,12 +1,12 @@
 <project name="TestRun" default="client">
    <!-- 
         To test tomcat standalone, type:
-          bin/tomcat.sh ant -f conf/test-tomcat.xml client
+          bin/tomcat ant -f conf/test-tomcat.xml client
         or for Windows systems, type:
           bin\tomcat.bat ant -f conf/test-tomcat.xml client
         
         To test apache, type:
-          bin/tomcat.sh ant -f conf/test-tomcat.xml -Dport=<your port> -Dhttp.protocol=HTTP/1.1 client-apache
+          bin/tomcat ant -f conf/test-tomcat.xml -Dport=<your port> -Dhttp.protocol=HTTP/1.1 client-apache
         or for Windows systems, type:
           bin/tomcat.bat ant -f conf/test-tomcat.xml -Dport=<your port> -Dhttp.protocol=HTTP/1.1 client-apache
 	  Specify <your port> from "Port" setting in apache's httpd.conf file.
