@@ -21,6 +21,7 @@ Bug No.  Description
 
 8099     Preserve the query string when redirecting to the welcome page.
 
+         Removed '.sh' extension from Unix shell scripts.
 
 Server:
 
